force-app/main/default/objects/Error_Log__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Apex</fullName><default>true</default><label>Apex</label></value>
            <value><fullName>Trigger</fullName><default>false</default><label>Trigger</label></value>
            <value><fullName>Flow</fullName><default>false</default><label>Flow</label></value>
            <value><fullName>Integration</fullName><default>false</default><label>Integration</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>